--- a/web/index.html
+++ b/web/index.html
@@ -2,24 +2,24 @@
 <html>
 <head>
   <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
+    Use a relative base so asset URLs are resolved from wherever this lives:
+    - If you’re serving from https://<you>.github.io/<repo>/ it'll work
+    - If you’re serving from the root (e.g. user/organization pages) it’ll work
   -->
-  <base href="/pangea/">
+  <base href="./">
 
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <!-- 📱 Make it mobile-friendly -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    html, body, #flutter_container {
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
+    }
+  </style>
 
+  <meta name="description" content="Reconstruct Pangea with interactive layers">
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -29,10 +29,11 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>pangea</title>
+  <title>Pangea</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <!-- Flutter bootstrap -->
+  <script src="flutter_bootstrap.js" defer></script>
 </body>
 </html>
